--- a/src/pages/en/books/judicial-goddess.astro
+++ b/src/pages/en/books/judicial-goddess.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="en"
   type="article"
   author="He Weifang"
-  image="https://jidaisya.pages.dev/images/books/judicial-goddess.jpg"
+  image="https://jidaisya.com/images/books/judicial-goddess.jpg"
 >
   <Fragment slot="header"><Header lang="en" /></Fragment>
   
@@ -72,7 +72,7 @@ import Footer from '../../../components/Footer.astro';
                     <span class="font-medium">A5, 268 pages</span>
                   </div>
                   <div class="flex justify-between">
-                    <span class="text-gray-600">Publication:</span>
+                    <span class="text-gray-600">Published:</span>
                     <span class="font-medium">June 2025</span>
                   </div>
                   <div class="flex justify-between">
