--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -22,12 +22,8 @@ import Footer from '../../components/Footer.astro';
             <span>門脇 佳津代</span>
           </div>
           <div>
-            <span class="font-medium">郵便番号：</span>
-            <span>〒657-0016</span>
-          </div>
-          <div>
             <span class="font-medium">住所：</span>
-            <span>神戸市灘区篠原台11-12</span>
+            <span>〒657-0016 神戸市灘区篠原台11-12</span>
           </div>
           <div>
             <span class="font-medium">FAX：</span>
