--- a/src/pages/zh-cn/books/constitutional-economics.astro
+++ b/src/pages/zh-cn/books/constitutional-economics.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="zh-cn"
   type="article"
   author="杨小凯"
-  image="https://jidaisya.pages.dev/images/books/constitutional-economics.jpg"
+  image="https://jidaisya.com/images/books/constitutional-economics.jpg"
 >
   <Fragment slot="header"><Header lang="zh-cn" /></Fragment>
   
