--- a/src/pages/books/constitutional-economics.astro
+++ b/src/pages/books/constitutional-economics.astro
@@ -10,7 +10,7 @@ import Footer from '../../components/Footer.astro';
   lang="zh-tw"
   type="article"
   author="楊小凱"
-  image="https://jidaisya.pages.dev/images/books/constitutional-economics.jpg"
+  image="https://jidaisya.com/images/books/constitutional-economics.jpg"
 >
   <Fragment slot="header"><Header lang="zh-tw" /></Fragment>
   
