--- a/src/pages/en/books/china-syracuse-plato.astro
+++ b/src/pages/en/books/china-syracuse-plato.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="en"
   type="article"
   author="Wang Lixiong"
-  image="https://jidaisya.pages.dev/images/books/china-syracuse-plato.jpg"
+  image="https://jidaisya.com/images/books/china-syracuse-plato.jpg"
 >
   <Fragment slot="header"><Header lang="en" /></Fragment>
   
@@ -58,7 +58,7 @@ import Footer from '../../../components/Footer.astro';
                   <p class="text-lg text-gray-600 mb-4">By Wang Lixiong</p>
                   <div class="flex flex-wrap gap-2 justify-center">
                     <span class="px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-sm">Political Thought</span>
-                    <span class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm">Contemporary China</span>
+                    <span class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm">Ethnic Issues</span>
                     <span class="px-3 py-1 bg-purple-100 text-purple-800 rounded-full text-sm">Social Commentary</span>
                   </div>
                 </div>
@@ -72,7 +72,7 @@ import Footer from '../../../components/Footer.astro';
                     <span class="font-medium">A5, 320 pages</span>
                   </div>
                   <div class="flex justify-between">
-                    <span class="text-gray-600">Publication:</span>
+                    <span class="text-gray-600">Published:</span>
                     <span class="font-medium">May 2025</span>
                   </div>
                   <div class="flex justify-between">
