--- a/src/pages/submit.astro
+++ b/src/pages/submit.astro
@@ -38,7 +38,7 @@ import Footer from '../components/Footer.astro';
         <ul class="space-y-3 text-gray-700">
           <li class="flex items-start">
             <span class="text-blue-600 mr-2 mt-1">•</span>
-            <span>我們歡迎中國近現當代政治思想、法制研究、經濟憲政、社會文化等領域的學術著作</span>
+            <span>我們歡迎中國近現當代政治思想、法治研究、經濟憲政、社會文化等領域的學術著作</span>
           </li>
           <li class="flex items-start">
             <span class="text-blue-600 mr-2 mt-1">•</span>
