--- a/src/pages/zh-cn/submit.astro
+++ b/src/pages/zh-cn/submit.astro
@@ -38,7 +38,7 @@ import Footer from '../../components/Footer.astro';
         <ul class="space-y-3 text-gray-700">
           <li class="flex items-start">
             <span class="text-blue-600 mr-2 mt-1">•</span>
-            <span>我们欢迎中国近现当代政治思想、法制研究、经济宪政、社会文化等领域的学术著作</span>
+            <span>我们欢迎中国近现当代政治思想、法治研究、经济宪政、社会文化等领域的学术著作</span>
           </li>
           <li class="flex items-start">
             <span class="text-blue-600 mr-2 mt-1">•</span>
